# ibus-slimt-t8n

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
data/: slimt-t8n-config.yaml
docs/: ibus-development.md
ibus-slimt-t8n/: CMakeLists.txt  application.cpp  application.h  engine_compat.cpp  engine_compat.h  gtypes.h  logging.h  main.cpp  slimt-t8n.xml.in  slimt_engine.cpp  slimt_engine.h  test.cpp  translator.cpp  translator.h
scripts/: git-export.sh  ibus-slimt-t8n-configure.py
scripts/ci/: e2e.sh  format-check.sh
